solc_ossfuzz_seed_corpus/test_sol/test_7eaba9a6012153d4bfc5209b3e3d87583d5be3fa1feebc1338d162ff4e939a6f_b73c008d59fb826e28e9478a197618c9fba749a3_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(bool i0,uint160 i1,uint208 i2) public   
  {
  }
  function f1() external    returns(function (bytes31, string[2] memory, int24) external   returns (bytes8, function () external   returns (int216)) o0,uint56 o1)
  {
    f0((false == (false ? (bytes28(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffff) != bytes28(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffff)) : false)),(uint160((uint160(1461501637330902918203684832716283019655932542975) / (((uint160(0) ** uint144(uint144(22300745198530623141535718272648361505980415))) >> uint16(uint16(0))) * uint160(1461501637330902918203684832716283019655932542975)))) << uint192(uint192(158916602872867028858601767137994404699313197210128620119))),(~((uint152(0) ^ (uint152((uint152(0) / uint152(0))) << uint152(uint152(0)))))));
    return (o0, uint56((((int56(36028797018963967) + int56(0)) & int56(36028797018963967)) % int56(-24394770979369668))));
  }
  event ev0(function (function (bytes19, address, bool) internal  , address) external   returns (uint176)  ep0);
}
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// Warning 3149: (su0.sol:421-736): The result type of the shift operation is equal to the type of the first operand (uint160) ignoring the (larger) type of the second operand (uint192) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 2582: (su0.sol:969-1014): Internal type cannot be used for external function type.
